eu9 Реле переименованы более точно

--- a/relay_2p.yaml
+++ b/relay_2p.yaml
@@ -1,3 +1,8 @@
+# Реле с двумя каналами, кнопкой и внешними выключателями
+
+substitutions:
+  unit_name: "relay-2p"
+
 select:
   - platform: template
     name: "External switch mode"
