--- a/relay_1p.yaml
+++ b/relay_1p.yaml
@@ -1,4 +1,7 @@
-# Реле с индикатором, кнопкой и внешним выключателем
+# Реле с одним каналом, кнопкой и внешним выключателем
+
+substitutions:
+  unit_name: "relay-1p"
 
 select:
   - platform: template
