--- a/relay_2m.yaml
+++ b/relay_2m.yaml
@@ -1,7 +1,7 @@
 # Реле с двумя каналами, кнопкой и внешними выключателями
 
 substitutions:
-  unit_name: "relay-2p"
+  unit_name: "relay-2m"
 
 select:
   - platform: template
